--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "termux-bot-wa",
+  "name": "unsaid",
   "version": "0.0.2",
   "description": "No comment",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "whatsapp",
     "bot"
   ],
-  "author": "FarhanXCo",
+  "author": "LilNext",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "^3.3.0",
